# vmkit

./: .autotools  .cproject  .gitignore  .project  AUTHORS  CREDITS.TXT  LICENSE.TXT  Makefile  Makefile.am  Makefile.common.in  Makefile.common.llvm  Makefile.config  Makefile.config.in  Makefile.rules  NEWS  README  README.TXT  README.txt  autogen.sh  configure  configure.ac  find-it.sh  llvm.patch  vmkit-llvm-2.2.patch  vmkit-llvm-svn.patch  vmkit-llvm-x86.patch
autoconf/: .gitignore  AutoRegen.sh  configure.ac
docs/: index.html  vmkit-critics.txt
incinerator/: README.TXT  knopflerfish.patch
include/: debug.h  jni_md.h  safepoint.h  types.h
lib/: Main.cpp  Makefile
lib/JnJVM/: Main.cpp  Makefile  Makefile.am  README  TODO
lib/JnJVM/Classpath/: Classpath.cpp  Classpath.h.in  ClasspathConstructor.cpp  ClasspathConstructor.cpp.inc  ClasspathConstructor.h  ClasspathConstructor.inc  ClasspathField.cpp  ClasspathField.inc  ClasspathMethod.cpp  ClasspathMethod.cpp.inc  ClasspathMethod.h  ClasspathMethod.inc  ClasspathReflect.h  ClasspathVMClass.cpp  ClasspathVMClass.cpp.inc  ClasspathVMClass.h  ClasspathVMClass.inc  ClasspathVMClassLoader.cpp  ClasspathVMClassLoader.cpp.inc  ClasspathVMClassLoader.h  ClasspathVMClassLoader.inc  ClasspathVMField.cpp  ClasspathVMField.cpp.inc  ClasspathVMField.h  ClasspathVMObject.cpp  ClasspathVMObject.cpp.inc  ClasspathVMObject.h  ClasspathVMObject.inc  ClasspathVMRuntime.cpp  ClasspathVMRuntime.cpp.inc  ClasspathVMRuntime.h  ClasspathVMRuntime.inc  ClasspathVMStackWalker.cpp  ClasspathVMStackWalker.cpp.inc  ClasspathVMStackWalker.h  ClasspathVMStackWalker.inc  ClasspathVMSystem.cpp  ClasspathVMSystem.cpp.inc  ClasspathVMSystem.h  ClasspathVMSystem.inc  (+16 more)
lib/JnJVM/Compiler/: ExceptionsCheck.inc  ExceptionsDwarf.inc  GCInfoPass.cpp  JITInfo.cpp  JavaAOTCompiler.cpp  JavaJIT.cpp  JavaJIT.h  JavaJITCompiler.cpp  JavaJITOpcodes.cpp  JnjvmModule.cpp  JnjvmModuleAOT.cpp  JnjvmModuleJIT.cpp  JnjvmModuleProvider.cpp  LowerConstantCalls.cpp  Makefile
lib/JnJVM/Isolate/: IsolateCommonClass.cpp  IsolateCommonClass.h  IsolateSharedLoader.cpp  IsolateSharedLoader.h  Makefile  SharedMaps.h
lib/JnJVM/LLVMRuntime/: Makefile  Makefile.am  runtime-boehm.ll  runtime-default-thread.ll  runtime-default.ll  runtime-isolate.ll  runtime-mmtk-thread.ll  runtime-multi-mmap.ll  runtime-service.ll  runtime-single-mmap.ll  runtime-single.ll
lib/JnJVM/VMCore/: BundleTermination.cpp  ExceptionsCheck.inc  ExceptionsDwarf.inc  JNIReferences.h  JavaAccess.h  JavaAllocator.h  JavaArray.cpp  JavaArray.h  JavaBacktrace.cpp  JavaCache.cpp  JavaCache.h  JavaClass.cpp  JavaClass.h  JavaConstantPool.cpp  JavaConstantPool.h  JavaInitialise.cpp  JavaIsolate.cpp  JavaIsolate.h  JavaJIT.cpp  JavaJIT.h  JavaJITInitialise.cpp  JavaJITOpcodes.cpp  JavaLocks.cpp  JavaLocks.h  JavaMetaJIT.cpp  JavaObject.cpp  JavaObject.h  JavaPrimitive.cpp  JavaPrimitive.h  JavaRuntime.cpp  JavaRuntime.h  JavaRuntimeJIT.cpp  JavaString.cpp  JavaString.h  JavaThread.cpp  JavaThread.h  JavaTypes.cpp  JavaTypes.h  JavaUpcalls.cpp  JavaUpcalls.h  (+28 more)
lib/Mvm/: CommandLine.cpp  Disassembler.cc  Disassembler.cpp  EscapeAnalysis.cpp  JIT.cpp  Main.cpp  Makefile  Makefile.am  MvmMemoryManager.cpp  MvmMemoryManager.h  Object.cc  Object.cpp  Sigsegv.cc  Sigsegv.cpp  VTOffset.cpp
lib/Mvm/Allocator/: .cvsignore  Makefile  Makefile.am  README  gcalloc.cc  gcalloc.h  gcchunk.cc  gcchunk.cpp  gcchunk.h  gcerror.cpp  gcerror.h  gcmapper.cc  gcmapper.cpp  gcmapper.h  main.cc  osdep.h
lib/Mvm/BoehmGC/: Makefile  Makefile.am  MvmGC.h  gc.cpp
lib/Mvm/CommonThread/: CollectionRV.cpp  Makefile  Makefile.am  ObjectLocks.cpp  Sigsegv-linux-x86.inc  Sigsegv-macos-x64.inc  Sigsegv.cpp  VMThreadData.cpp  cterror.cc  cterror.h  ctlock.cc  ctlock.cpp  ctthread.cc  ctthread.cpp  main.cc
lib/Mvm/Compiler/: Disassembler.cpp  EscapeAnalysis.cpp  InlineMalloc.cpp  JIT.cpp  LLVMRuntime.ll  LoopSafePoints.cpp  MMTkInline.inc  Makefile  VmkitGC.cpp  mvm-mmtk-thread.ll  mvm-runtime.ll
lib/Mvm/GCMmap2/: Makefile  Makefile.am  MutatorThread.h  MvmGC.h  ObjectHeader.h  ctcircular.h  ctosdep.h  gc.cc  gc.cpp  gccollector.cc  gccollector.cpp  gccollector.h  gcinit.cc  gcinit.cpp  gcthread.cc  gcthread.cpp  gcthread.h  main.cc  main.cpp
lib/Mvm/JITGCPass/: JITGCPass.cpp  Makefile
lib/Mvm/LLVMRuntime/: LLVMRuntime.ll  Makefile
lib/Mvm/MMTk/: Makefile  MutatorThread.cpp  MutatorThread.h  MvmGC.cpp  MvmGC.h  VmkitGC.cpp  VmkitGC.h
lib/Mvm/Runtime/: CommandLine.h  EscapeAnalysis.cpp  JIT.cpp  LLVMAssembly.ll  LLVMAssembly64.ll  LLVMRuntime.ll  Makefile  MethodInfo.cpp  MvmMemoryManager.cpp  Object.cpp  PrintBuffer.cpp  Sigsegv.cpp  SystemThreads.cpp  UTF8.cpp  VMKit.cpp  VirtualMachine.cpp
lib/Mvm/StaticGCPass/: Makefile  StaticGCPass.cpp
lib/Mvm/StaticGCPrinter/: Makefile  VmkitGCPrinter.cpp
lib/N3/: Main.cpp  Makefile  Makefile.am  README  README.txt  pnet-0.7.4.patch
lib/N3/LLVMRuntime/: Makefile  runtime.ll
lib/N3/Mono/: LICENSE.TXT  Makefile  Mono.cpp  MonoMSCorlib.cpp  MonoPath.inc.in  MonoString.cpp  MonoString.h  number-formatter.h
lib/N3/PNetLib/: LICENSE.TXT  Makefile  PNetLib.cpp  PNetLib.h  PNetMSCorlib.cpp  PNetPath.cpp.in  PNetString.cpp  PNetString.h
lib/N3/VMCore/: Assembly.cpp  Assembly.h  BackTrace.cpp  CLIAccess.h  CLIJit.cpp  CLIJit.h  CLIJitMeta.cpp  CLIRuntimeJIT.cpp  CLISignature.cpp  CLIString.cpp  CLIString.h  LinkN3Runtime.h  LockedMap.cpp  LockedMap.h  LowerArrayLength.cpp  MSCorlib.cpp  MSCorlib.h  MSCorlib.inc  Makefile  Makefile.am  N3.cpp  N3.h  N3Debug.h  N3Initialise.cpp  N3MetaType.h  N3ModuleProvider.cpp  N3ModuleProvider.h  NativeUtil.cpp  NativeUtil.h  OpcodeNames.def  Opcodes.cpp  PNetLib.cpp  PNetLib.h  Reader.cpp  Reader.h  SignatureNames.def  UTF8.cpp  UTF8.h  VMArray.cpp  VMArray.h  (+11 more)
mmtk/: Makefile
osgi/: .project
patches/: classpath-0.99.macos.patch  llvm.patch  vmkit-llvm-ppc.patch
test/: lshl.java  lshr.java
tests/: AnnotationClassTest.java  FieldWriteTest.java  LockThread.java  MyAnnotation.java  ThreadTest.java  debug.txt  i-jvm-log.txt  minimal.xargs  (+1 more)
www/: ls.php  (+28 more)
(+734 files in other folders)
